fix styling of response viewing buttons on mobile

--- a/public/event.less
+++ b/public/event.less
@@ -53,7 +53,8 @@
 
   .plugin-calendar-event-responses {
     > div {
-      min-width: 300px;
+      padding: 0;
+      padding-right: 25px;
     }
 
     .plugin-calendar-event-responses-user {
